# Sol-R

./: .travis.yml
apps/: CMakeLists.txt  solrViewer.cpp
apps/scenes/: Scene.cpp
apps/scenes/science/: HypercubeScene.cpp  HypercubeScene.h
games/trailblazer/: CMakeLists.txt  trailblazer.cpp
solr/: SolRStub.cpp  SolRStub.h
solr/engines/: GPUKernel.cpp  GPUKernel.h
solr/engines/cuda/: CudaRayTracer.cu  GeometryIntersections.cuh
solr/io/: OBJReader.cpp  OBJReader.h
solr/opengl/: rtgl.cpp
